--- a/source/declarators.tex
+++ b/source/declarators.tex
@@ -3068,11 +3068,19 @@ is ill-formed.
 \end{example}
 
 \pnum
-If there are fewer \grammarterm{initializer-clause}{s} in the list than there
-are elements in the aggregate, then each element not explicitly initialized
-shall be initialized from its default member initializer~(\ref{class.mem}) or,
-if there is no default member initializer, from an empty
+Each non-variant element of the aggregate that is not explicitly initialized
+is initialized from its default member initializer~(\ref{class.mem}) or,
+if there is no default member initializer, copy-initialized from an empty
 initializer list~(\ref{dcl.init.list}).
+If the aggregate is a union and the initializer list is empty, then
+\begin{itemize}
+\item
+if any union member has a default member initilizer,
+that member is initialized from its default member initializer;
+\item
+otherwise, the first member of the union (if any)
+is copy-initialized from an empty initializer list.
+\end{itemize}
 \begin{example}
 
 \begin{codeblock}
